--- a/packages/docs/src/assets/styles/markdown/vp-doc.css
+++ b/packages/docs/src/assets/styles/markdown/vp-doc.css
@@ -536,7 +536,7 @@
   color: var(--vp-code-copy-code-active-text);
   background-color: var(--vp-code-copy-code-hover-bg);
   white-space: nowrap;
-  content: var(--vp-code-copy-copied-text-content);
+  content: attr(data-copied-text);
 }
 
 .vp-doc [class*="language-"] > span.lang {
